--- a/app/views/assets/_asset.html.slim
+++ b/app/views/assets/_asset.html.slim
@@ -1,3 +1,3 @@
-.asset
+li.asset
   = asset.name
-  = link_to 'Save', asset.file_url, target: "_blank"
+  .right = link_to 'Save', asset.file_url, target: "_blank"
