--- a/app/views/assets/_asset.html.slim
+++ b/app/views/assets/_asset.html.slim
@@ -1,3 +1,5 @@
 li.asset
   = asset.name
-  .right = link_to 'Save', asset.file_url, target: "_blank"
+  .right 
+    em.author = asset.user
+    = link_to 'Save', asset.file_url, target: "_blank"
